--- a/twigs/themes.twig
+++ b/twigs/themes.twig
@@ -87,6 +87,18 @@
 {% block main %}
     <div class="row">
         <div class="col-md-offset-2 col-md-8">
+
+			{% if showerr %}
+			    <div class="alert alert-danger" role="alert">
+			    	<strong>{{ errormsg }}</strong>
+			    </div>
+			{% endif %}
+            {% if alreadysubmitted %}
+				<div class="alert alert-danger" role="alert">
+					<strong>{{ errorsubmit }}</strong>
+				</div>
+            {% endif %}
+
             <table class="table table-striped table-hover" id="themetab">
                 <thead>
                     <tr>
@@ -107,7 +119,7 @@
 
                 {% if context.hasadmin %}
 					<td><i class="editb fa fa-pencil"></i></td>
-			        <td><i class="delb fa fa-trash-o"></i></td>
+			        <td class="danger"><i class="delb fa fa-trash-o"></i></td>
 				{% endif %}
 
 			</tr>
@@ -116,7 +128,42 @@
 		    {% endfor %}
 		</tbody>
             </table>
-	    <p><button class="btn btn-primary" data-toggle="modal" data-target="#addu" type="button">Add Theme</button></p>
+	    {#<p><button class="btn btn-primary" data-toggle="modal" data-target="#addu" type="button">Add Theme</button></p>#}
+
+			<button type="button" data-toggle="modal" data-target="#addu" class="btn btn-primary btn-lg btn-block btn-success">Add Theme</button>
+
+
+			<br/><br>
+
+
+			<div class="well">
+			<h3 class="text-info">Theme choice - Choose 2</h3>
+
+			<form id="themechoice" action="#" method="post">
+
+			<div class="form-group">
+				<label for="exampleSelect1" class="text-info">First choice</label>
+				<select name="firstchoice" class="form-control" id="exampleSelect1">
+                    {%  for th in siteinfo.themes %}
+						<option value="{{ th.getID }}" >{{ th.name }}</option>
+                    {% endfor %}
+				</select>
+			</div>
+			<div class="form-group">
+				<label for="exampleSelect1" class="text-info">Second choice</label>
+				<select name="secondchoice" class="form-control" id="exampleSelect1">
+					{%  for th in siteinfo.themes %}
+						<option value="{{ th.getID }}" >{{ th.name }}</option>
+					{% endfor %}
+				</select>
+			</div>
+				<button type="submit" class="btn btn-primary btn-lg btn-block btn-success">Confirm</button>
+
+			</form>
+			</div>
+
+			<br><br><br>
+
         </div>
     </div>
 
@@ -143,10 +190,7 @@
 				<label for="un" class="control-label">Description</label>
 				<input type="text" id="un" name="description" placeholder="theme description - alphanumeric characters only" class="form-control" required="required"/>
 			</div>
-			{#<div class="form-group">#}
-			    {#<label for="pw" class="control-label">Description</label>#}
-			    {#<input type="text" id="desc" name="description" placeholder="Enter a description" class="form-control" required="required"/>#}
-		    	{#</div>#}
+
 		    </form>
 
                 </div>
