Added ModuleLEader page and database integration

--- a/twigs/index.twig
+++ b/twigs/index.twig
@@ -62,8 +62,7 @@
 
 
             <a class="btn btn-primary" href="/webProject/topics" role="button">Topics</a>
-            <a class="btn btn-primary" href="/webproject/programs" role="button">Something else</a>
-            <a class="btn btn-primary" href="/webproject/apps" role="button">Apps</a>
+            <a class="btn btn-primary" href="/webproject/test" role="button">Test</a>
 
         </div>
 
