--- a/twigs/support/users.twig
+++ b/twigs/support/users.twig
@@ -139,9 +139,9 @@
 			    <td>{{h.tick(u.isadmin, 'admb')}}</td>
 			    <td>{{h.tick(u.isdeveloper, 'devb')}}</td>
 			    <td>{{h.tick(u.isstudent, 'stdnt')}}</td>
-			    <td>{{h.tick(u.isstudent, 'spvsr')}}</td>
-			    <td>{{h.tick(u.isstudent, 'thmeldr')}}</td>
-			    <td>{{h.tick(u.isstudent, 'mduleldr')}}</td>
+			    <td>{{h.tick(u.issupervisor, 'spvsr')}}</td>
+			    <td>{{h.tick(u.isthemeleader, 'thmeldr')}}</td>
+			    <td>{{h.tick(u.ismoduleleader, 'mduleldr')}}</td>
 
 			    <td><i class="editb fa fa-pencil"></i></td>
 			    <td><i class="delb fa fa-trash-o"></i></td>
