--- a/twigs/error/403.twig
+++ b/twigs/error/403.twig
@@ -10,7 +10,10 @@
     <section class="row">
         <div class="col-md-8 col-md-offset-2">
             <div class="well">
-                Sorry, you do not have permission to do that.
+                <h4>FORBIDDEN - YOU DO NOT HAVE THE PERMISSION</h4>
+            </div>
+            <div style="margin:auto; ">
+                <img  src="https://qph.ec.quoracdn.net/main-qimg-acb9ab22996fc09b958537aa9d4cb167-c?convert_to_webp=true">
             </div>
             <p><a href="{{base}}/">Return to home page</a></p>
 	</div>
