--- a/twigs/programs.twig
+++ b/twigs/programs.twig
@@ -8,17 +8,12 @@
 
 
 {% block pageheader %}
-	<h1> Programs </h1>
+	<h1> Module Leader Arbitration </h1>
 {% endblock pageheader %}
 
 
 
 {% block main %}
-
-    <h2> Theme Uploads </h2>
-    {% if context.hasuser %}
-        {#<a class="btn btn-info" href="/webproject/programupload" role="button">Upload New Program</a>#}
-    {%  endif %}
 
     {% if alreadysubmitted %}
         <div class="alert alert-danger" role="alert">
@@ -36,44 +31,6 @@
         </div>
     {% endif %}
 
-
-    <form action="" method="post" role="form">
-        {#<input type="text" name="search" >#}
-        {{f.text({ label: 'Theme', name: 'search', required:false })}}
-
-
-        {#
-
-        MAYBE ADD BUTTONS TO ARRANGE THE STUDENTS IN A SPECIFIC ORDER.
-        ORDER BY THEME??
-
-
-
-        #}
-        <input type="submit" class="btn btn-lg"/>
-        {#<button type='submit' name="search" class='btn btn btn-lg'> Search </button>#}
-    </form>
-
-    {% for th in t %}
-        {{ th }}
-    {%  endfor %}
-
-    {#{% if t is defined %}#}
-{##}
-        <h1>--->{{ searchval }}</h1>
-{##}
-    {#{% endif %}#}
-    {#<h1>--->{{t }}</h1>#}
-    {#{% for th in siteinfo.themeleaders %}#}
-        {#{{ th }}#}
-    {#{%  endfor %}#}
-
-
-
-    {#{% if donesearch is defined %}#}
-        {#<h2>{{  searches }}</h2>#}
-
-
         <div class="well">
             <table class="table table-hover">
                 <thead>
@@ -90,12 +47,11 @@
                 <form id="arbitrate" action="#" method="post">
                     <tr class="warning">
                         <td name ="sname" value="{{ s.login }}">
-                            <input type="hidden" name="stdntid" value="{{ s.getID }}">
-
                             {{ s.login }}
                         </td>
                         <td>
                             <select name="themeselect" id="themeselect" class="form-control">
+                                <option hidden value="empty">Click to select ...</option>
                                 {% for th in siteinfo.themes %}
                                     {% for ch in siteinfo.choices %}
                                         {% if s.getID == ch.user_id %}
@@ -112,25 +68,21 @@
                         </td>
                         <td>
                             <select name="themeleader" id="themeleader" class="form-control">
+                                <option hidden value="empty">Click to select ...</option>
                                 {% for tl in siteinfo.themeleaders %}
                                     <option value="{{ tl.getID }}" >{{ tl.login }}</option>
                                 {%  endfor %}
                             </select>
                         </td>
 
-                        <td><button type="submit" value="{{ s.getID }}" name="submitbutton" class="btopics btn btn-default" data-dismiss="modal">Confirm</button></td>
+                        <td><button type="submit" value="{{ s.getID }}" name="submitbutton" class="btn btn-info" data-dismiss="modal">Confirm</button></td>
 
-                        {#<td><a href="programs/?id={{ th.id }}">Download</a></td>#}
-                        {#<td><a href="programs/?id={{ th.id }}">Download</a></td>#}
-                        {#<td><a href="programs/?delete={{ th.id }}">Delete</a></td>#}
                     </tr>
                 </form>
                 {%  endfor %}
                 </tbody>
 
             </table>
-
-            <button type="submit" data-toggle="modal" data-target="#addu" class="btn btn-primary btn-lg btn-block btn-success">Confirm Selection</button>
 
         </div>
 
