--- a/twigs/index.twig
+++ b/twigs/index.twig
@@ -1,40 +1,3 @@
-{#{% extends 'page.twig' %}#}
-
-{#{% block onload %}#}
-    {#$('#alert').on('click', function(){#}
-        {#bootbox.alert('Hello World')#}
-    {#})#}
-{#{% endblock onload %}#}
-
-{#{% block header %}#}
-    {#<div class="col-md-12">#}
-	{#<h1 class="cntr">Header</h1>#}
-    {#</div>#}
-{#{% endblock header %}#}
-
-{#{% block main %}#}
-    {#<section class="row">#}
-        {#<div class="col-md-2">#}
-            {#<p>Left</p>#}
-        {#</div>#}
-        {#<div class="col-md-8">#}
-            {#<div class="well">#}
-                {#This is the middle column#}
-            {#</div>#}
-            {#<button id="alert" class="btn btn-large btn-info" type="button">Alert</button>#}
-	{#</div>#}
-        {#<div id="rightbar" class="col-md-2">#}
-	    {#<p>Right</p>#}
-	{#</div>#}
-    {#</section>#}
-{#{% endblock main %}#}
-
-{#{% block footer %}#}
-    {#<div class="col-md-12">#}
-        {#<p class="cntr">Footer</p>#}
-    {#<div>#}
-{#{% endblock footer %}#}
-
 {% extends 'page.twig' %}
 
 {% block header %}
@@ -48,21 +11,47 @@
         <div class="col-md-4">
 
 
-            {#{% if  context.hasuser  %}#}
-                {#<a class="btn btn-primary" href="/webproject/themes" role="button">Themes</a>#}
-            {#{% elseif context.hasstudent %}#}
-                {#<a class="btn btn-primary" href="/webProject/themes" role="button">Themes</a>#}
-            {#{%  else %}#}
-                {#<a class="btn btn-primary" href="/webProject/themes" role="button">Themes</a>#}
+            <ul class="nav navbar-default">
+                <li{{page == 'home' ? ' class="active"'}}><a href="{{base}}/login">Login</a></li>
+                <li{{page == 'home' ? ' class="active"'}}><a href="{{base}}/">Home</a></li>
 
-            {#{% endif %}#}
+                    <li{{page == 'themes' ? ' class="active"'}}><a href="{{base}}/themes">Themes</a></li>
+                    <li{{page == 'topics' ? ' class="active"'}}><a href="{{base}}/topics">Topics</a></li>
 
-            <a class="btn btn-primary" href="/webProject/themes" role="button">Themes</a>
+                {% if context.hasuser %}
+
+                    <li{{page == 'themeleader' ? ' class="active"'}}><a href="{{base}}/themeleader">Theme Leader</a></li>
+                    <li{{page == 'moduleleader' ? ' class="active"'}}><a href="{{base}}/moduleleader">Module Leader</a></li>
+                    <li{{page == 'supervisor' ? ' class="active"'}}><a href="{{base}}/supervisor">Supervisor</a></li>
+                {% endif %}
+
+                {% if context.hasdeveloper %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Developer<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{base}}/devel/hack">Run Code</a></li>
+                            <li><a href="{{base}}/devel/fail">Fail</a></li>
+                            <li><a href="{{base}}/devel/throw">Throw</a></li>
+                            <li><a href="{{base}}/devel/mail">Test mail</a></li>
+                            <li><a href="{{base}}/admin/info">PHP Info</a></li>
+                        </ul>
+                    </li>
+                {% endif %}
+                {% if context.hasadmin %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{base}}/admin/pages">Pages</a></li>
+                            <li><a href="{{base}}/admin/users">Users</a></li>
+                            <li><a href="{{base}}/admin/contexts">Contexts</a></li>
+                            <li><a href="{{base}}/admin/roles">Roles</a></li>
+                            <li><a href="{{base}}/admin/config">Config</a></li>
+                        </ul>
+                    </li>
+                {% endif %}
 
 
-
-            <a class="btn btn-primary" href="/webProject/topics" role="button">Topics</a>
-            <a class="btn btn-primary" href="/webproject/test" role="button">Test</a>
+            </ul>
 
         </div>
 
